--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "hammerjs": "^2.0.8",
     "jexia-sdk-js": "^4.2.2",
     "jquery": "^3.4.1",
+    "lodash-es": "^4.17.15",
+    "moment": "^2.24.0",
+    "ngx-moment": "^3.4.0",
     "ngx-socket-io": "^3.0.1",
     "popper.js": "^1.15.0",
     "process": "^0.11.10",
@@ -42,6 +45,7 @@
     "@angular/language-service": "~8.2.9",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash-es": "^4.17.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
